// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mergeResults can merge 2 responses 1`] = `
Object {
  "aliases": Object {
    "fbjs": "fbjs/lib/index.js",
    "react": "react/lib/react.development.js",
    "react-dom": "react-dom/lib/react-dom.development.js",
  },
  "contents": Object {
    "fbjs/lib/index.js": "yes yes",
    "react-dom/lib/react-dom.development.js": "yes yes",
    "react/lib/react.development.js": "yes",
  },
  "dependencies": Array [
    Object {
      "name": "react",
      "version": "16.0.0",
    },
    Object {
      "name": "react-dom",
      "version": "16.0.0",
    },
  ],
  "dependencyAliases": Object {},
  "dependencyDependencies": Object {
    "fbjs": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "react",
        "react-dom",
      ],
      "resolved": "12.0.0",
      "semver": "^12.0.0",
    },
  },
}
`;

exports[`mergeResults can merge responses with absolute conflicts 1`] = `
Object {
  "aliases": Object {
    "fbjs": "fbjs/lib/index.js",
    "react": "react/lib/react.development.js",
    "react-dom": "react-dom/lib/react-dom.development.js",
  },
  "contents": Object {
    "fbjs/lib/index.js": "yes yes",
    "react-dom/lib/react-dom.development.js": "yes yes",
    "react/lib/react.development.js": "yes",
  },
  "dependencies": Array [
    Object {
      "name": "react",
      "version": "16.0.0",
    },
    Object {
      "name": "react-dom",
      "version": "16.0.0",
    },
    Object {
      "name": "conflict",
      "version": "16.0.0",
    },
  ],
  "dependencyAliases": Object {},
  "dependencyDependencies": Object {
    "fbjs": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "react",
        "react-dom",
        "conflict",
      ],
      "resolved": "12.0.1",
      "semver": "^12.0.0",
    },
  },
}
`;

exports[`mergeResults can merge responses with absolute+semver conflicts, but same entries 1`] = `
Object {
  "aliases": Object {
    "fbjs": "fbjs/lib/index.js",
    "react": "react/lib/react.development.js",
    "react-dom": "react-dom/lib/react-dom.development.js",
  },
  "contents": Object {
    "fbjs/lib/index.js": "yes yes",
    "react-dom/lib/react-dom.development.js": "yes yes",
    "react/lib/react.development.js": "yes",
  },
  "dependencies": Array [
    Object {
      "name": "react",
      "version": "16.0.0",
    },
    Object {
      "name": "react-dom",
      "version": "16.0.0",
    },
    Object {
      "name": "conflict",
      "version": "16.0.0",
    },
  ],
  "dependencyAliases": Object {},
  "dependencyDependencies": Object {
    "fbjs": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "react",
        "react-dom",
        "conflict",
      ],
      "resolved": "12.0.1",
      "semver": "^12.2.0",
    },
  },
}
`;

exports[`mergeResults can merge responses with full semver conflicts 1`] = `
Object {
  "aliases": Object {
    "fbjs": "fbjs/lib/index.js",
    "react": "react/lib/react.development.js",
    "react-dom": "react-dom/lib/react-dom.development.js",
  },
  "contents": Object {
    "fbjs/11.0.1/lib/index.js": "yes yes 11",
    "fbjs/lib/index.js": "yes yes",
    "react-dom/lib/react-dom.development.js": "yes yes",
    "react/lib/react.development.js": "yes",
  },
  "dependencies": Array [
    Object {
      "name": "react",
      "version": "16.0.0",
    },
    Object {
      "name": "react-dom",
      "version": "16.0.0",
    },
    Object {
      "name": "conflict",
      "version": "16.0.0",
    },
  ],
  "dependencyAliases": Object {
    "conflict": Object {
      "fbjs": "fbjs/11.0.1",
    },
  },
  "dependencyDependencies": Object {
    "fbjs": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "react",
        "react-dom",
      ],
      "resolved": "12.0.0",
      "semver": "^12.0.0",
    },
  },
}
`;

exports[`mergeResults can merge responses with semver/absolute conflicts, but different entries 1`] = `
Object {
  "aliases": Object {
    "fbjs": "fbjs/lib/index.js",
    "react": "react/lib/react.development.js",
    "react-dom": "react-dom/lib/react-dom.development.js",
  },
  "contents": Object {
    "fbjs/12.0.1/lib/index.js": "yes yes c",
    "fbjs/lib/index.js": "yes yes",
    "react-dom/lib/react-dom.development.js": "yes yes",
    "react/lib/react.development.js": "yes",
  },
  "dependencies": Array [
    Object {
      "name": "react",
      "version": "16.0.0",
    },
    Object {
      "name": "react-dom",
      "version": "16.0.0",
    },
    Object {
      "name": "conflict",
      "version": "16.0.0",
    },
  ],
  "dependencyAliases": Object {
    "conflict": Object {
      "fbjs": "fbjs/12.0.1",
    },
  },
  "dependencyDependencies": Object {
    "fbjs": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "react",
        "react-dom",
      ],
      "resolved": "12.0.0",
      "semver": "^12.0.0",
    },
  },
}
`;
